tests/pass/char.us
fn id<T>(v:T) -> T {
    return v;
}

fn main() -> u8 {
    id('c');
}