tests/fail/dif_sizes.us
fn main<T>(a:i32) -> u8 {
    return a; // Expect : Cannot unify `u8` vs `i32`
}

